--- a/src/app/containers/project-objectives/project-objectives.component.scss
+++ b/src/app/containers/project-objectives/project-objectives.component.scss
@@ -1,3 +1,19 @@
 .project-objectives-container {
   background-color: #fff;
 }
+
+@media (max-width: 768px) {
+  ::ng-deep .objectives-drawer {
+    width: 25rem !important;
+    margin-top: 6rem !important;
+    height: calc(100% - 6rem) !important;
+  }
+}
+
+@media (min-width: 769px) {
+  ::ng-deep .objectives-drawer {
+    width: 40rem !important;
+    height: calc(100% - 12rem) !important;
+    margin-top: 10rem !important;
+  }
+}
