--- a/src/app/containers/project-objectives/project-objectives.component.html
+++ b/src/app/containers/project-objectives/project-objectives.component.html
@@ -21,9 +21,7 @@
     </div>
     <div class="row mb-4 p-2">
       <div class="col-10">
-        <div class="h5 mb-2 text-muted">
-          Specific Objectives{{ showObjectiveFormDrawer }}
-        </div>
+        <div class="h5 mb-2 text-muted">Specific Objectives</div>
       </div>
       <div class="col-2 d-flex justify-content-end">
         <p-button
