--- a/src/app/containers/project-objectives/project-objectives.component.html
+++ b/src/app/containers/project-objectives/project-objectives.component.html
@@ -1,4 +1,7 @@
-<div class="mt-2 p-1 project-objectives-container">
+<div
+  class="mt-2 p-1 project-objectives-container"
+  *ngIf="{ systemId: systemId$ | async } as params"
+>
   <div
     class="flex justify-center"
     animationDuration=".5s"
@@ -6,7 +9,8 @@
       currentUser() === null ||
       !projectProgram() ||
       !currentProject() ||
-      !objectives()
+      !objectives() ||
+      !params?.systemId
     "
   >
     <p-progress-spinner co ariaLabel="loading" />
@@ -35,7 +39,7 @@
       <div class="col-md-12 col-sm-12 col-sx-12">
         <p-table
           size="small"
-          [value]="objectives()"
+          [value]="objectives()?.trackedEntities"
           showGridlines
           [tableStyle]="{ 'min-width': '30rem' }"
         >
@@ -53,13 +57,19 @@
                 {{ dataRow?.keyedAttributeValues["SPECIFIC_OBJECTIVE"]?.value }}
               </td>
               <td>
-                {{
-                  dataRow?.keyedAttributeValues["OBJECTIVE_DESCRIPTION"]?.value
-                }}
+                {{ dataRow?.keyedAttributeValues["DESCRIPTION"]?.value }}
               </td>
             </tr>
           </ng-template>
         </p-table>
+        <div class="d-flex justify-content-end mt-2">
+          <p-button
+            severity="secondary"
+            label="Objective"
+            icon="pi pi-plus"
+            (onClick)="onAddNewObjective($event)"
+          />
+        </div>
       </div>
       <p-drawer
         [(visible)]="showObjectiveFormDrawer"
@@ -68,7 +78,7 @@
       >
         <ng-template #header>
           <div class="flex items-center gap-2">
-            <span class="font-bold">Objective management</span>
+            <span class="font-bold text-muted">Objectives management</span>
           </div>
         </ng-template>
         <div class="col-md-12 col-sm-12 col-sx-12">
@@ -98,8 +108,10 @@
               />
               <p-button
                 severity="primary"
-                [disabled]="!formData.isFormValid || saving"
-                (onClick)="onSave($event)"
+                [disabled]="
+                  !formData.isFormValid || saving || !params?.systemId
+                "
+                (onClick)="onSave($event, params?.systemId)"
                 label="Save"
               />
             </div>
