--- a/src/app/shared/components/ngx-form/ngx-form.component.html
+++ b/src/app/shared/components/ngx-form/ngx-form.component.html
@@ -111,7 +111,7 @@
         >
           <ng-template #selectedItem let-selectedOption>
             <div class="flex items-center gap-2">
-              <div>{{ field.value }}</div>
+              <div>{{ selectedOption.label }}</div>
             </div>
           </ng-template>
           <ng-template let-option #item>
