--- a/src/app/shared/components/ngx-form/ngx-form.component.scss
+++ b/src/app/shared/components/ngx-form/ngx-form.component.scss
@@ -7,6 +7,7 @@
 ::ng-deep .p-select {
   padding: 3px !important;
   width: 100% !important;
+  border-radius: 0 !important;
 }
 
 ::ng-deep .p-textarea {
